--- a/TareaDeCursoContabilidadDeCosto/ProyectoContabilidadDeCosto/ProyectoContabilidadDeCosto/ProyectoContabilidadDeCosto.csproj
+++ b/TareaDeCursoContabilidadDeCosto/ProyectoContabilidadDeCosto/ProyectoContabilidadDeCosto/ProyectoContabilidadDeCosto.csproj
@@ -9,6 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Controlador\Controlador.csproj" />
+    <ProjectReference Include="..\MODELO\MODELO.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
